[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-usage-accountant"
version = "0.0.11"
description = "A library to account for shared resource usage"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'sentry-arroyo>=2.22.0'
]

[tool.setuptools.package-data]
usageaccountant = ["py.typed"]

[tool.black]
line-length = 79
target-version = ['py38']
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
show_missing = true
fail_under = 100
skip_covered = false
exclude_lines = ["@pytest.mark.slow_integration"]

[tool.pytest.ini_options]
minversion = "0.0.11"
addopts = "--durations=3 -vv --doctest-modules"
testpaths = ["."]
norecursedirs = [
    "**/__pycache__",
    "**/.*",
    "venv",
    "tmp*",
    "*tmp",
]
python_files = ["*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["test_"]

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    "**/.*",
    "venv",
    "tmp*",
    "*tmp",
]

pythonPlatform = "Linux"
pythonVersion = "3.11"

typeCheckingMode = "strict"

# turn on all the checks not already enabled by "strict":
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "typing-extensions>=4.15.0",
]
